Tweaked leading to ensure legibility when zoomed.

--- a/source/stylesheets/_fonts.css.scss
+++ b/source/stylesheets/_fonts.css.scss
@@ -41,7 +41,7 @@ li {
 p { 
   font-size: 24px;
   font-family: 'TheanoOldStyle-Regular', Georgia, serif;
-  line-height: 36px;
+  line-height: 1.5;
   margin-bottom: 0;
   margin-top: 0;
   text-rendering: optimizeLegibility;
